Update Sql File

--- a/version1.html
+++ b/version1.html
@@ -1,1 +1,35 @@
-<h1>Version 1 File</h1>
+//make folder:
+	mkdir FolderName
+//Move To Folder:
+	cd FolderName
+//Initilize Git
+	git init
+//Configure git
+
+git config --global user.name Abc
+git config --global user.email Abc@gmail.com
+// check status
+git status
+// create files
+touc FileName.txt
+// Add Files TO Unstage
+git add -A
+// Add Files Into Local Repository
+git commit -m 'Provide Here Msg'
+
+// check branch
+git branch
+// create new Branch
+git branch BranchName
+// Move Towards Branches
+git checkout BranchName
+
+// Merge Two Branches
+git merge BranchName
+
+// Remove / Delete Branch
+git branch -D BranchName
+// Delete Files
+rm FileName.txt
+// Check All Files
+dir
